--- a/DocumentManagemnetService/App.xaml
+++ b/DocumentManagemnetService/App.xaml
@@ -34,8 +34,8 @@
             <DataTemplate DataType="{x:Type local1:RouteNode}" x:Key="RouteNodeTemplate">
                 <Border Background="LightBlue" CornerRadius="8" Padding="8" BorderBrush="SteelBlue" BorderThickness="1">
                     <StackPanel>
-                        <TextBlock Text="{Binding Role}" FontWeight="Bold" />
-                        <TextBlock Text="{Binding Title}" FontStyle="Italic" />
+                        <TextBlock Text="{Binding StepNumber, StringFormat='Этап {0}'}"  FontWeight="Bold" />
+                        <TextBlock Text="{Binding Name}" FontStyle="Italic" />
                     </StackPanel>
                 </Border>
             </DataTemplate>
