--- a/DocumentManagemnetService/Views/RouteEditorView.xaml
+++ b/DocumentManagemnetService/Views/RouteEditorView.xaml
@@ -26,18 +26,19 @@
 
         <StackPanel Grid.Column="1" Margin="10">
             <StackPanel Orientation="Horizontal">
-                <ComboBox materialDesign:HintAssist.Hint="Маршрут" Style="{StaticResource MaterialDesignDataGridComboBox}" Margin="5" Width="282" Foreground="White" FontWeight="Bold" BorderBrush="White"/>
+                <TextBox Text="{Binding RouteName}"
+                    materialDesign:HintAssist.Hint="Маршрут" Style="{StaticResource MaterialDesignTextBox}" Margin="5" Width="282" Foreground="White" FontWeight="Bold" BorderBrush="White"/>
             </StackPanel>
             <TextBlock Text="Этапы маршрута:" FontWeight="Bold" FontSize="16" Foreground="White"/>
-            <ListBox ItemsSource="{Binding Steps}" SelectedItem="{Binding SelectedStep}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Display}" />
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-
-
+            <ScrollViewer>
+                <ListBox ItemsSource="{Binding Steps}" SelectedItem="{Binding SelectedStep}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Display}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </ScrollViewer>
             <StackPanel Orientation="Horizontal" Margin="8">
                 <Button Style="{StaticResource MaterialDesignFlatButton}"  Margin="5" Content="Вверх" Command="{Binding MoveUpCommand}" Foreground="White"/>
                 <Button Style="{StaticResource MaterialDesignFlatButton}"  Margin="5" Content="Вниз" Command="{Binding MoveDownCommand}" Foreground="White"/>
@@ -45,7 +46,17 @@
 
             <StackPanel Orientation="Horizontal" Margin="8">
                 <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="5" Content="Добавить" Command="{Binding AddStepCommand}" Foreground="White"/>
-                <ComboBox materialDesign:HintAssist.Hint="Подписант" Style="{StaticResource MaterialDesignDataGridComboBox}" Width="247" Height="20" Background="{x:Null}" Foreground="White" FontWeight="Bold" BorderBrush="White"/>
+                <ComboBox 
+                        ItemsSource="{Binding Users}"
+                          SelectedItem="{Binding SelectedUser}"
+                    materialDesign:HintAssist.Hint="Подписант" 
+                    Width="247" Height="28" Background="{x:Null}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Display}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="8">
                 <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="5" Content="Удалить" Command="{Binding RemoveStepCommand}" Foreground="White"/>
