--- a/DocumentManagemnetService/Views/RoutesView.xaml
+++ b/DocumentManagemnetService/Views/RoutesView.xaml
@@ -5,17 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DocumentManagementService.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-             xmlns:graph="clr-namespace:GraphSharp.Controls;assembly=GraphSharp.Controls"
+             xmlns:graph="clr-namespace:DocumentManagementService"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
         <StackPanel Orientation="Horizontal" Background="#78B24B" Height="50">
-            <ComboBox Style="{StaticResource MaterialDesignDataGridComboBox}"
-              Margin="10"
-              Width="200"
-            ItemsSource="{Binding Categories}"
-            SelectedItem="{Binding SelectedCategory}"
-            materialDesign:HintAssist.Hint="Категория документа" Foreground="White" BorderBrush="White" Height="18"/>
             <Button Style="{StaticResource MaterialDesignFlatButton}"  Margin="5" Content="Создать маршрут" Command="{Binding CreateRouteCommand}" Foreground="White"/>
             <Button Style="{StaticResource MaterialDesignFlatButton}"  Margin="5" Content="Изменить выбранный маршрут" Command="{Binding EditRouteCommand}" Foreground="White"/>
         </StackPanel>
@@ -39,20 +33,19 @@
             <ListBox
                  Margin="10,10,10, 0"
                 VerticalAlignment="Stretch"
-                 ItemsSource="{Binding FilteredRoutes}"
+                 ItemsSource="{Binding Routes}"
                  SelectedItem="{Binding SelectedRoute}" Background="#78B24B" Foreground="White">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="8">
                             <TextBlock Text="{Binding Name}" FontWeight="Bold" />
-                            <TextBlock Text="{Binding Description}" FontStyle="Italic" FontSize="12" Foreground="White"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
             <Border Margin="10,10,10,10"
                 Grid.Column="1" BorderBrush="LightGray" BorderThickness="1"  Background="{DynamicResource PrimaryHueDarkBrush}">
-                <graph:GraphLayout x:Name="graphLayout"
+                <graph:RouteGraphLayout x:Name="graphLayout"
                                Graph="{Binding Graph}"
                                LayoutAlgorithmType="Linear"
                                OverlapRemovalAlgorithmType="FSA" />
