--- a/DocumentManagemnetService/App.xaml
+++ b/DocumentManagemnetService/App.xaml
@@ -4,7 +4,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:graph="clr-namespace:GraphSharp.Controls;assembly=GraphSharp.Controls" 
-             xmlns:local1="clr-namespace:DocumentManagementService.Models"
+             xmlns:local1="clr-namespace:DocumentManagementService.Models" ShutdownMode="OnMainWindowClose"
              >
     <Application.Resources>
         <ResourceDictionary>
