--- a/DocumentManagemnetService/Views/MenuView.xaml
+++ b/DocumentManagemnetService/Views/MenuView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DocumentManagementService.Views" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Единая библиотека корпоративных документов" Height="720" Width="1200">
+        Height="720" Width="1200">
     <materialDesign:DrawerHost>
         <materialDesign:DrawerHost.LeftDrawerContent>
             <StackPanel Background="#78B24B">
@@ -28,16 +28,16 @@
             </StackPanel>
         </materialDesign:DrawerHost.LeftDrawerContent>
         <Grid>
-            <DockPanel Background="#78B24B" Height="61" VerticalAlignment="Top">
+            <DockPanel Background="#78B24B" Height="69" VerticalAlignment="Top">
                 <Button Style="{StaticResource MaterialDesignToolForegroundButton}" 
                  Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"
                   CommandParameter="{x:Static Dock.Left}"
                         DockPanel.Dock="Left" Margin="8">
                     <materialDesign:PackIcon Kind="Menu" Height="26" Width="22" HorizontalAlignment="Center" />
                 </Button>
-                <TextBlock Text="Единая библиотека корпоративных документов" 
+                <TextBlock Text="Система управления корпоративными документами" 
                            VerticalAlignment="Center"
-                           Foreground="White" FontSize="16"
+                           Foreground="White" FontSize="20"
                            Margin="8"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="8">
                     <Button Command="{Binding AccountCommand}" Style="{StaticResource MaterialDesignToolForegroundButton}"/>
@@ -45,7 +45,7 @@
             </DockPanel>
             <Frame x:Name="MainFrame"
                    NavigationUIVisibility="Hidden"
-                   Margin="0,85,0,0" />
+                   Margin="0,70,0,0" />
         </Grid>
     </materialDesign:DrawerHost>
 </Window>
