--- a/DocumentManagemnetService/Views/RoutesView.xaml
+++ b/DocumentManagemnetService/Views/RoutesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DocumentManagementService.Views.RoutesView"
+﻿<Window x:Class="DocumentManagementService.Views.RoutesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:DocumentManagementService.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              xmlns:graph="clr-namespace:DocumentManagementService"
+
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
@@ -58,4 +59,4 @@
             </Border>
         </Grid>
     </StackPanel>
-</UserControl>
+</Window>
