--- a/DocumentManagemnetService/Views/PublicDocumentsView.xaml
+++ b/DocumentManagemnetService/Views/PublicDocumentsView.xaml
@@ -3,16 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DocumentManagementService.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:DocumentManagementService.Views" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="420" d:DesignWidth="900">
     <UserControl.Resources>
         <DataTemplate x:Key="ComboboxItemTemplate">
-                <StackPanel Orientation="Horizontal">
-                    <CheckBox IsChecked="True" 
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="True" 
                               Background="{DynamicResource PrimaryHueDarkBrush}"/>
-                    <TextBlock Text="{Binding Title}"/>
-                </StackPanel>
+                <TextBlock Text="{Binding Title}"/>
+            </StackPanel>
         </DataTemplate>
 
         <DataTemplate x:Key="SelectionBoxTemplate">
@@ -23,7 +24,7 @@
             <ContentPresenter x:Name="Presenter"
                Content="{Binding}"
                ContentTemplate="{StaticResource ComboboxItemTemplate}" />
-            
+
             <DataTemplate.Triggers>
                 <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}}" 
                              Value="{x:Null}">
@@ -33,7 +34,7 @@
             </DataTemplate.Triggers>
         </DataTemplate>
     </UserControl.Resources>
-    
+
     <Grid Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -67,18 +68,26 @@
                         Style="{StaticResource MaterialDesignFloatingHintDatePicker}"/>
         </StackPanel>
 
-        <DataGrid Grid.Row="1"
+        <DataGrid x:Name="DocumentGrid"
                   ItemsSource="{Binding FilteredDocuments}"
                   AutoGenerateColumns="False"
                   CanUserAddRows="False"
                   SelectionMode="Single"
                   IsReadOnly="True"
-                  SelectedItem="{Binding SelectedDocument}">
+                  SelectedItem="{Binding SelectedDocument}" Margin="539,-281,-539,324" Grid.RowSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Название" Binding="{Binding Title}" Width="*"/>
                 <DataGridTextColumn Header="Категория" Binding="{Binding Category}" Width="150"/>
                 <DataGridTextColumn Header="Дата" Binding="{Binding CreatedAt, StringFormat=d}" Width="120"/>
             </DataGrid.Columns>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction 
+                                Command="{Binding MouseDoubleClickCommand}"
+                                CommandParameter="{Binding ElementName=DocumentGrid, 
+                                Path=SelectedItem}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </DataGrid>
     </Grid>
 </UserControl>
