--- a/DocumentManagemnetService/Views/ViewerView.xaml
+++ b/DocumentManagemnetService/Views/ViewerView.xaml
@@ -5,16 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DocumentManagementService.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             >
     <Grid Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="183,0,0,0" Height="450" VerticalAlignment="Top">
-            <DocumentViewer Margin="181,2,87,6" Height="446" Width="431"/>
+        <StackPanel Grid.Column="1" Height="450" VerticalAlignment="Top">
+            <DocumentViewer Document="{Binding Xps}" Height="446" Width="431"/>
         </StackPanel>
-        <StackPanel Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" HorizontalAlignment="Left" Width="177">
+        <StackPanel Grid.Column="0" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" HorizontalAlignment="Left" Width="177">
             <ListBox Style="{StaticResource MenuListBoxStyle}"
                          ItemsSource="{Binding DocumentItems}"
                      SelectedItem="{Binding SelectedDocumentItem, Mode=TwoWay}">
