--- a/DocumentManagemnetService/Views/ViewerView.xaml
+++ b/DocumentManagemnetService/Views/ViewerView.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DocumentManagementService.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:DocumentManagementService.Views" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"     
+             xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+             xmlns:wfi="clr-namespace:System.Windows.Forms.Integration;assembly=WindowsFormsIntegration" xmlns:pdfiumviewer="clr-namespace:PdfiumViewer;assembly=PdfiumViewer"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              >
@@ -12,12 +15,12 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1" Height="450" VerticalAlignment="Top">
-            <DocumentViewer Document="{Binding Xps}" Height="446" Width="431"/>
+        <StackPanel Grid.Column="1" Margin="50,0,-600,0">
+            <wfi:WindowsFormsHost Name="pdfHost" Height="450" />
         </StackPanel>
         <StackPanel Grid.Column="0" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" HorizontalAlignment="Left" Width="177">
-            <ListBox Style="{StaticResource MenuListBoxStyle}"
-                         ItemsSource="{Binding DocumentItems}"
+            <ListBox
+                     ItemsSource="{Binding DocumentItems}"
                      SelectedItem="{Binding SelectedDocumentItem, Mode=TwoWay}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
